# prompt-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
prompt_generator/: run.py
prompt_generator/directory_structure/: main.py
prompt_generator/docs_generator/: main.py
prompt_generator/docs_prompt_generator/: main.py
prompt_generator/get_dir_structure/: main.py
prompt_generator/markdown_parser/: main.py
prompt_generator/tasks_prompt_generator/: main.py
prompt_generator/utils/: __init__.py  file_utils.py  input_utils.py  print_utils.py
src/directory_structure/: __init__.py  get_directory_structure.py
src/docs_generator/: __init__.py  generate_docs.py
src/file_utils/: __init__.py  get_code_block.py  get_dir_json.py  load_gitignore.py  read_file.py
src/input_utils/: __init__.py  input_color.py
src/markdown_parser/: __init__.py  parse_md.py  script.py
src/print_utils/: __init__.py  print_color.py  print_result.py
