[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "prompt-generator"
version = "0.2"
description = "Prompt Generator is a flexible and user-friendly package that offers customizable scripts for generating meaningful and context-aware prompts. These prompts can be used to guide the writing, enhancement, and debugging of code."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Vincenzo Cascone"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyperclip",
]

[project.scripts]
parse_md = "markdown_parser:main"

[project.urls]
repository = "https://github.com/vincenzocascone/prompt-generator"

