[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "prompt-generator"
version = "0.3.2"
description = "Prompt Generator is a flexible and user-friendly package that offers customizable scripts for generating effective and context-aware prompts. These prompts can be used to guide the writing, improvement, and debugging of code."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Vincenzo Cascone" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyperclip",
    "pathspec",
]

[project.scripts]
pg = "prompt_generator.run:main"

[project.urls]
repository = "https://github.com/vincenzocascone/prompt-generator"

